# sandbox

./: .gitignore  .rosinstall  setup.sh
sandbox/asctec_drivers-master/asctec_autopilot/src/: serial_interface.cpp
sandbox/asctec_drivers-master/asctec_proc/launch/: asctec_driver.launch  asctec_driver_thrust.launch
sandbox/asctec_drivers-master/asctec_proc/src/: asctec_proc.cpp
sandbox/mav_tools-master/flyer_interface/src/flyer_interface/cfg/: CommConfig.py  CtrlConfig.py  PIDVXConfig.py  PIDVYConfig.py  PIDVZConfig.py  PIDXConfig.py  PIDYConfig.py  PIDYawConfig.py  PIDZConfig.py
sandbox/mav_tools-master/mav_msgs/src/mav_msgs/msg/: _Height.py  _Pitch.py  _RC.py  _Roll.py  _Status.py  _Thrust.py  _YawRate.py
sandbox/mav_tools-master/mav_srvs/src/mav_srvs/srv/: _AdvanceState.py  _ChangeDesPose.py  _ESTOP.py  _GetFlightState.py  _GetMotorsOnOff.py  _Land.py  _PositionHold.py  _RetreatState.py  _SetCtrlType.py  _SetMotorsOnOff.py  _Takeoff.py  _ToggleEngage.py  _VelocityHold.py
sandbox/quadrotorTestControl/: CMakeLists.txt  manifest.xml
sandbox/quadrotorTestControl/include/: BirdEye.h  DummyBird.h  HighBird.h  birdeye.h  dummybird.h  highbird.h
sandbox/quadrotorTestControl/launch/: Pelican.launch  hummingbird.launch  hummingbirdView.launch
sandbox/quadrotorTestControl/src/: BirdEye.cpp  DummyBird.cpp  HighBird.cpp  angleTransform.cpp  birdeye.cpp  dummybird.cpp  highbird.cpp  quadSmart.cpp  quadView.cpp  testControl.cpp
sandbox/ros_quad_code/: CMakeLists.txt  CompilationHelp  asctec_driver.launch  quadrotor_trial1.cpp  vicon_pos.cpp  vicon_pos.h
sandbox/vicon_bridge/cfg/: tf_distort.cfgc
sandbox/vicon_bridge/cfg/cpp/vicon_bridge/: tf_distortConfig.h
sandbox/vicon_bridge/launch/: vicon.launch
sandbox/vicon_bridge/msg_gen/cpp/include/vicon_bridge/: Marker.h  Markers.h  TfDistortInfo.h
sandbox/vicon_bridge/src/vicon_bridge/cfg/: tf_distortConfig.py
sandbox/vicon_bridge/src/vicon_bridge/msg/: _Marker.py  _Markers.py  _TfDistortInfo.py
sandbox/vicon_bridge/src/vicon_bridge/srv/: _viconCalibrateSegment.py  _viconGrabPose.py
sandbox/vicon_bridge/srv_gen/cpp/include/vicon_bridge/: viconCalibrateSegment.h  viconGrabPose.h
